# multi_hart

./: Cargo.toml  Makefile  flake.nix  memory.x
.cargo/: config.toml
src/: lib.rs  main.rs
